--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -7,3 +7,9 @@
 <p>
   description: <%= @todo.description %>
 </p>
+
+<p>
+  <%= link_to "Edit", edit_todo_path(@todo) %>
+  <%= link_to "Back", todos_path %>
+  
+</p>
